# aoc2023

./: aoc2023.cabal
app/: Day1.hs  Day1p2.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
py/: day5.py  day6.py  day7.py
