cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: My implementation of adevnt of code 2023

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dror nir
maintainer:         me@drornir.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable day1
    main-is:          Day1.hs

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        QuasiQuotes
    build-depends:    
        base ^>=4.17.2.0,
        raw-strings-qq
    hs-source-dirs:   app
    default-language: Haskell2010


executable day1p2
    main-is:          Day1p2.hs
    other-extensions:
        QuasiQuotes
    build-depends:    
        base ^>=4.17.2.0,
        raw-strings-qq
    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    main-is:          Day2.hs
    other-extensions:
        QuasiQuotes
    build-depends:    
        base ^>=4.17.2.0,
        raw-strings-qq,
        text
    hs-source-dirs:   app
    default-language: Haskell2010

executable day3
    main-is:          Day3.hs
    -- other-extensions:
        
    build-depends:    
        base ^>=4.17.2.0,
        text,
        array
    hs-source-dirs:   app
    default-language: Haskell2010
